# Todo-App

./: alembic.ini  pyproject.toml  todoapp.db
alembic/: env.py
alembic/versions/: c5689e9100e5_create_phone_number_for_user_column.py
app/: dependencies.py  main.py
app/models/: TodoModel.py  UserModel.py
app/routers/: auth_api.py  todo_api.py  user_api.py
app/schemas/: LoginSchema.py  SignupSchema.py  TodoSchema.py
app/services/: security.py  signup.py  todo.py  user.py
